--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hi!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Personal Website</title>
+</head>
+<body>
+
+<h1>This page is my personal website and it is currently under construction</h1>
+<p></p>
+
+</body>
+</html>
