--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Personal Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="your-stylesheet.css">
+  <title>Your Website</title>
 </head>
 <body>
 
-<h1>Hi, I'm Kazım Bayram, an Industrial Engineering student at Middle East Technical University, passionate about Artificial Intelligence and Software Development. I'm fascinated by the potential of technology to solve real-world challenges and create positive impact.
-
-Besides my core studies, I've pursued various courses and projects to develop my skills in AI and software, such as participating in the Machine Learning Summer BootCamp at Miuul, where I learned about feature engineering, encoding, and data cleaning. I also hold multiple certifications in HTML, CSS, Javascript, Python, and Financial Markets from Coursera.
-
-My interest in graphic design grew during a project internship at SCA Social, where I applied my creativity and technical skills to produce visually appealing designs for digital marketing campaigns. I enjoyed working with a diverse and dynamic team, and gained valuable experience in project management and resource allocation.
-
-My career goal is to combine my knowledge and skills in digital marketing and artificial intelligence, and create innovative solutions that drive businesses forward. I'm always eager to learn, collaborate, and explore new opportunities. Let's connect and chat about tech, engineering, or anything related to our shared interests.</h1>
-<p></p>
+  <div class="about-section">
+    <h1>Hi, I'm Kazım Bayram</h1>
+    <p>An Industrial Engineering student at Middle East Technical University, passionate about Artificial Intelligence and Software Development...</p>
+    <p>Besides my core studies, I've pursued various courses and projects to develop my skills in AI and software, such as participating in the Machine Learning Summer BootCamp at Miuul, where I learned about feature engineering, encoding, and data cleaning. I also hold multiple certifications in HTML, CSS, Javascript, Python, and Financial Markets from Coursera.</p>
+    <p>My interest in graphic design grew during a project internship at SCA Social, where I applied my creativity and technical skills to produce visually appealing designs for digital marketing campaigns. I enjoyed working with a diverse and dynamic team, and gained valuable experience in project management and resource allocation.</p>
+    <p>My career goal is to combine my knowledge and skills in digital marketing and artificial intelligence, and create innovative solutions that drive businesses forward. I'm always eager to learn, collaborate, and explore new opportunities.</p>
+    <p>Let's connect and chat about tech, engineering, or anything related to our shared interests. <a href="#">Connect with me</a></p>
+  </div>
 
 </body>
 </html>
