--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <p>Besides my core studies, I've pursued various courses and projects to develop my skills in AI and software, such as participating in the Machine Learning Summer BootCamp at Miuul, where I learned about feature engineering, encoding, and data cleaning. I also hold multiple certifications in HTML, CSS, Javascript, Python, and Financial Markets from Coursera.</p>
     <p>My interest in graphic design grew during a project internship at SCA Social, where I applied my creativity and technical skills to produce visually appealing designs for digital marketing campaigns. I enjoyed working with a diverse and dynamic team, and gained valuable experience in project management and resource allocation.</p>
     <p>My career goal is to combine my knowledge and skills in digital marketing and artificial intelligence, and create innovative solutions that drive businesses forward. I'm always eager to learn, collaborate, and explore new opportunities.</p>
-    <p>Let's connect and chat about tech, engineering, or anything related to our shared interests. <a href="www.linkedin.com/in/kazım-bayram
-
-">Connect with me</a></p>
+    <p>Let's connect and chat about tech, engineering, or anything related to our shared interests. <a href="www.linkedin.com/in/kazım-bayram">Connect with me</a></p>
   </div>
 
 </body>
